--- a/src/App.css
+++ b/src/App.css
@@ -41,10 +41,36 @@
   padding-top: 80px;
 }
 
-.modal-content {
+.collection-modal-content {
   font-family: 'Inconsolata', monospace;
   color: #001b50;
   background-color: #f6fff5;
+  width: 50%;
+  height: 50%;
+  margin: auto;
+  padding: 10px;
+  border-radius: 20px;
+  border-color: 20px solid #00a82f;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.settings-modal-content {
+  font-family: 'Inconsolata', monospace;
+  color: #001b50;
+  background-color: purple;
+  width: 50%;
+  height: 50%;
+  margin: auto;
+  padding: 10px;
+  border-radius: 20px;
+  border-color: 20px solid #00a82f;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.help-modal-content {
+  font-family: 'Inconsolata', monospace;
+  color: #001b50;
+  background-color: aqua;
   width: 50%;
   height: 50%;
   margin: auto;
