--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Inconsolata:wght@700&family=Rubik&display=swap");
-@import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inconsolata:wght@700&display=swap");
 
 .App {
   font-family: "Rubik", sans-serif;
@@ -20,6 +20,7 @@
 }
 
 .subheading {
+  font-size: 2.5vh;
   padding-bottom: 4vh;
 }
 
@@ -27,6 +28,46 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.info-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.info {
+  padding-top: 2vh;
+  padding-bottom: 1vh;
+  font-size: 2vh;
+}
+
+.tasks {
+  display: flex;
+  flex-direction: column;
+  width: 20%;
+}
+
+.task-heading-container {
+  display: flex;
+  justify-content: space-between;
+}
+
+.task-heading {
+  font-size: 2vh;
+}
+
+.plusButton {
+  font-size: 1.5vh;
+  border: none;
+  outline: none;
+  background: none;
+}
+
+.divider {
+  width: 20vw;
+  height: 5;
+  background-color: #001b50;
 }
 
 .modal {
@@ -42,7 +83,7 @@
 }
 
 .modal-content {
-  font-family: 'Inconsolata', monospace;
+  font-family: "Inconsolata", monospace;
   color: #001b50;
   background-color: #f6fff5;
   width: 50%;
@@ -61,7 +102,7 @@
   font-size: 25px;
   font-weight: bold;
 }
-  
+
 .close:hover,
 .close:focus {
   color: #000;
