--- a/src/App.css
+++ b/src/App.css
@@ -20,7 +20,7 @@
 }
 
 .subheading {
-  font-size: 2.5vh;
+  font-size: 2vh;
   padding-bottom: 4vh;
 }
 
@@ -42,32 +42,12 @@
   font-size: 2vh;
 }
 
-.tasks {
-  display: flex;
-  flex-direction: column;
-  width: 20%;
-}
-
-.task-heading-container {
-  display: flex;
-  justify-content: space-between;
-}
-
-.task-heading {
-  font-size: 2vh;
-}
-
-.plusButton {
-  font-size: 1.5vh;
+.toolbar-button {
   border: none;
   outline: none;
   background: none;
-}
-
-.divider {
-  width: 20vw;
-  height: 5;
-  background-color: #001b50;
+  padding: 2vh;
+  cursor: pointer;
 }
 
 .modal {
@@ -83,7 +63,7 @@
 }
 
 .collection-modal-content {
-  font-family: 'Inconsolata', monospace;
+  font-family: "Inconsolata", monospace;
   color: #001b50;
   background-color: #f6fff5;
   width: 50%;
@@ -96,7 +76,7 @@
 }
 
 .settings-modal-content {
-  font-family: 'Inconsolata', monospace;
+  font-family: "Inconsolata", monospace;
   color: #001b50;
   background-color: purple;
   width: 50%;
@@ -109,7 +89,7 @@
 }
 
 .help-modal-content {
-  font-family: 'Inconsolata', monospace;
+  font-family: "Inconsolata", monospace;
   color: #001b50;
   background-color: aqua;
   width: 50%;
