--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,4 @@
 @import url("https://fonts.googleapis.com/css2?family=Inconsolata:wght@700&family=Rubik&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Inconsolata:wght@700&display=swap");
 
 .App {
   font-family: "Rubik", sans-serif;
@@ -11,6 +10,7 @@
 .header {
   display: flex;
   justify-content: space-between;
+  padding: 2vh 2vw 0vh;
 }
 
 .heading {
@@ -51,7 +51,7 @@
 }
 
 .modal {
-  /* background-color: rgba(107, 107, 107, 0.4); */
+  background-color: rgba(107, 107, 107, 0.4);
   z-index: 1;
   width: 100%;
   height: 100%;
@@ -59,13 +59,12 @@
   top: 0;
   left: 0;
   overflow: auto; /* Enable scroll if needed */
-  padding-top: 80px;
+  padding-top: 140px;
 }
 
-.collection-modal-content {
-  font-family: "Inconsolata", monospace;
+.modal-content {
+  font-family: "Rubik", sans-serif;
   color: #001b50;
-  background-color: #f6fff5;
   width: 50%;
   height: 50%;
   margin: auto;
@@ -75,38 +74,28 @@
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
-.settings-modal-content {
-  font-family: "Inconsolata", monospace;
-  color: #001b50;
-  background-color: purple;
-  width: 50%;
-  height: 50%;
-  margin: auto;
-  padding: 10px;
-  border-radius: 20px;
-  border-color: 20px solid #00a82f;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+.modal-header {
+  display: flex;
+  justify-content: space-between;
 }
 
-.help-modal-content {
+.modal-title {
   font-family: "Inconsolata", monospace;
-  color: #001b50;
-  background-color: aqua;
-  width: 50%;
-  height: 50%;
-  margin: auto;
-  padding: 10px;
-  border-radius: 20px;
-  border-color: 20px solid #00a82f;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  padding: 1vh 2vh 0vh;
+  font-size: 3.5vh;
+}
+
+.modal-body {
+  padding: 1vh 2vh 1vh;
+  max-width: 50%;
 }
 
 /* Close button */
 .close {
   color: #aaaaaa;
-  float: right;
   font-size: 25px;
   font-weight: bold;
+  padding: 1.5vh 2vh 0vh;
 }
 
 .close:hover,
